--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,6 +45,12 @@ body {
   color: #fff;
   box-sizing: border-box;
 }
+.pokeDex section {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 .pokemon {
   width: 200px;
@@ -54,28 +60,34 @@ body {
   align-items: center;
   justify-content: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
   background-color: #fff;
   margin: 10px;
   overflow: hidden;
   cursor: pointer;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 .pokemon .buttomCard {
   background-color: #fff;
-  width: 100%;
-  margin-top: 0;
-  padding: 10px;
-  border-radius: 20px;
+  width: 90%;
+  height: 50%;
+  border-radius: 10px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 0.5rem;
 }
 .pokemon .card-image {
+  position: absolute;
   width: 100%;
   height: auto;
   max-height: 160px;
   -o-object-fit: cover;
      object-fit: cover;
+  top: -25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .pokemon .types-container {
   color: #fff;
@@ -84,7 +96,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 0.25rem;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 .pokemon .type {
   padding: 0.2rem 0.4rem;
@@ -95,6 +107,16 @@ body {
   font-weight: 500;
   display: inline-block;
   text-align: center;
+}
+.pokemon p {
+  font-size: 0.65rem;
+  letter-spacing: 0.02rem;
+  color: #555;
+  padding: 0 1rem 1rem 1rem;
+  text-align: center;
+  max-width: 90%;
+  margin-top: -0.3rem;
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 /* Dynamic background-color generation */
